gen/xmlParser.java
// Generated from D:/Projects/compilers/lab/src/main/antlr4\xml.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class xmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, ARRAY_TYPE=2, TYPE=3, ACTION_OPERATOR=4, BOOL_OPERATOR=5, DOCUMENT=6, 
		NODE=7, ATTRIBUTE=8, STRING=9, INT=10, FLOAT=11, ELSE=12, IF=13, FOR=14, 
		WHILE=15, IN=16, AND=17, OR=18, NEW=19, NAME=20, NUMBER_LITERAL=21, STRING_LITERAL=22, 
		WHITESPACE=23, OPEN_BRACKET=24, CLOSE_BRACKET=25, OPEN_SQUAR_EBRACKET=26, 
		CLOSE_SQUARE_BRACKET=27, OPEN_FIGURE_BRACKET=28, CLOSE_FIGURE_BRACKET=29, 
		SEMICOLON=30, QOUTES_ONE=31, QOUTES_TWO=32, ASSIGMENT=33, SUM_ASSIGMENT=34, 
		DOT=35, MORE_THAN=36, LESS_THAN=37, EQUAL=38, NOT_EQUAL=39, MORE_EQUAL=40, 
		LESS_EQUAL=41, PlUS=42, MINUS=43, MULTIPLICATION=44, DIVISION=45, COMMENT=46;
	public static final int
		RULE_operation = 0, RULE_initialise_var = 1, RULE_assignment = 2, RULE_add_assignment = 3, 
		RULE_get_elem = 4, RULE_get_array_elem = 5, RULE_func_call = 6, RULE_params = 7, 
		RULE_initialise_func = 8, RULE_if_block = 9, RULE_else_if_block = 10, 
		RULE_else_block = 11, RULE_if_statement = 12, RULE_for_statement = 13, 
		RULE_range_statement = 14, RULE_while_statement = 15, RULE_condition = 16, 
		RULE_type_cast = 17, RULE_expression = 18, RULE_get_operation = 19, RULE_xml = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"operation", "initialise_var", "assignment", "add_assignment", "get_elem", 
			"get_array_elem", "func_call", "params", "initialise_func", "if_block", 
			"else_if_block", "else_block", "if_statement", "for_statement", "range_statement", 
			"while_statement", "condition", "type_cast", "expression", "get_operation", 
			"xml"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", null, null, null, null, "'document'", "'node'", "'attribute'", 
			"'string'", "'int'", "'float'", "'else'", "'if'", "'for'", "'while'", 
			"'in'", "'and'", "'or'", "'new'", null, null, null, null, "'('", "')'", 
			"'['", "']'", "'{'", "'}'", "';'", "'''", "'\"'", "'='", "'+='", "'.'", 
			"'>'", "'<'", "'=='", "'!='", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "ARRAY_TYPE", "TYPE", "ACTION_OPERATOR", "BOOL_OPERATOR", 
			"DOCUMENT", "NODE", "ATTRIBUTE", "STRING", "INT", "FLOAT", "ELSE", "IF", 
			"FOR", "WHILE", "IN", "AND", "OR", "NEW", "NAME", "NUMBER_LITERAL", "STRING_LITERAL", 
			"WHITESPACE", "OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_SQUAR_EBRACKET", 
			"CLOSE_SQUARE_BRACKET", "OPEN_FIGURE_BRACKET", "CLOSE_FIGURE_BRACKET", 
			"SEMICOLON", "QOUTES_ONE", "QOUTES_TWO", "ASSIGMENT", "SUM_ASSIGMENT", 
			"DOT", "MORE_THAN", "LESS_THAN", "EQUAL", "NOT_EQUAL", "MORE_EQUAL", 
			"LESS_EQUAL", "PlUS", "MINUS", "MULTIPLICATION", "DIVISION", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "xml.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public xmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class OperationContext extends ParserRuleContext {
		public Get_operationContext get_operation() {
			return getRuleContext(Get_operationContext.class,0);
		}
		public Initialise_varContext initialise_var() {
			return getRuleContext(Initialise_varContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Add_assignmentContext add_assignment() {
			return getRuleContext(Add_assignmentContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public For_statementContext for_statement() {
			return getRuleContext(For_statementContext.class,0);
		}
		public While_statementContext while_statement() {
			return getRuleContext(While_statementContext.class,0);
		}
		public Type_castContext type_cast() {
			return getRuleContext(Type_castContext.class,0);
		}
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).enterOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).exitOperation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xmlVisitor ) return ((xmlVisitor<? extends T>)visitor).visitOperation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperationContext operation() throws RecognitionException {
		OperationContext _localctx = new OperationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_operation);
		try {
			setState(50);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				get_operation();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				initialise_var();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(44);
				assignment();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(45);
				add_assignment();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(46);
				if_statement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(47);
				for_statement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(48);
				while_statement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(49);
				type_cast();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Initialise_varContext extends ParserRuleContext {
		public List<TerminalNode> TYPE() { return getTokens(xmlParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(xmlParser.TYPE, i);
		}
		public TerminalNode NAME() { return getToken(xmlParser.NAME, 0); }
		public TerminalNode ASSIGMENT() { return getToken(xmlParser.ASSIGMENT, 0); }
		public TerminalNode NEW() { return getToken(xmlParser.NEW, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(xmlParser.OPEN_BRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(xmlParser.CLOSE_BRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(xmlParser.SEMICOLON, 0); }
		public Initialise_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initialise_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).enterInitialise_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).exitInitialise_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xmlVisitor ) return ((xmlVisitor<? extends T>)visitor).visitInitialise_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Initialise_varContext initialise_var() throws RecognitionException {
		Initialise_varContext _localctx = new Initialise_varContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_initialise_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(TYPE);
			setState(53);
			match(NAME);
			setState(54);
			match(ASSIGMENT);
			setState(55);
			match(NEW);
			setState(56);
			match(TYPE);
			setState(57);
			match(OPEN_BRACKET);
			setState(58);
			expression(0);
			setState(59);
			match(CLOSE_BRACKET);
			setState(60);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(xmlParser.NAME, 0); }
		public TerminalNode ASSIGMENT() { return getToken(xmlParser.ASSIGMENT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(xmlParser.SEMICOLON, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(xmlParser.OPEN_BRACKET, 0); }
		public TerminalNode NUMBER_LITERAL() { return getToken(xmlParser.NUMBER_LITERAL, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(xmlParser.CLOSE_BRACKET, 0); }
		public TerminalNode TYPE() { return getToken(xmlParser.TYPE, 0); }
		public TerminalNode ARRAY_TYPE() { return getToken(xmlParser.ARRAY_TYPE, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xmlVisitor ) return ((xmlVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ARRAY_TYPE || _la==TYPE) {
				{
				setState(62);
				_la = _input.LA(1);
				if ( !(_la==ARRAY_TYPE || _la==TYPE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(65);
			match(NAME);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPEN_BRACKET) {
				{
				setState(66);
				match(OPEN_BRACKET);
				setState(67);
				match(NUMBER_LITERAL);
				setState(68);
				match(CLOSE_BRACKET);
				}
			}

			setState(71);
			match(ASSIGMENT);
			setState(72);
			expression(0);
			setState(73);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Add_assignmentContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(xmlParser.NAME, 0); }
		public TerminalNode SUM_ASSIGMENT() { return getToken(xmlParser.SUM_ASSIGMENT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(xmlParser.SEMICOLON, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(xmlParser.OPEN_BRACKET, 0); }
		public TerminalNode NUMBER_LITERAL() { return getToken(xmlParser.NUMBER_LITERAL, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(xmlParser.CLOSE_BRACKET, 0); }
		public Add_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).enterAdd_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).exitAdd_assignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xmlVisitor ) return ((xmlVisitor<? extends T>)visitor).visitAdd_assignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Add_assignmentContext add_assignment() throws RecognitionException {
		Add_assignmentContext _localctx = new Add_assignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_add_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(NAME);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPEN_BRACKET) {
				{
				setState(76);
				match(OPEN_BRACKET);
				setState(77);
				match(NUMBER_LITERAL);
				setState(78);
				match(CLOSE_BRACKET);
				}
			}

			setState(81);
			match(SUM_ASSIGMENT);
			setState(82);
			expression(0);
			setState(83);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Get_elemContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(xmlParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(xmlParser.NAME, i);
		}
		public TerminalNode DOT() { return getToken(xmlParser.DOT, 0); }
		public Get_elemContext get_elem() {
			return getRuleContext(Get_elemContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(xmlParser.SEMICOLON, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(xmlParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(xmlParser.CLOSE_BRACKET, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public Get_elemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_get_elem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).enterGet_elem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).exitGet_elem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xmlVisitor ) return ((xmlVisitor<? extends T>)visitor).visitGet_elem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Get_elemContext get_elem() throws RecognitionException {
		return get_elem(0);
	}

	private Get_elemContext get_elem(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Get_elemContext _localctx = new Get_elemContext(_ctx, _parentState);
		Get_elemContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_get_elem, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(86);
			match(NAME);
			setState(87);
			match(DOT);
			setState(88);
			match(NAME);
			}
			_ctx.stop = _input.LT(-1);
			setState(100);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(98);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new Get_elemContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_get_elem);
						setState(90);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(91);
						match(SEMICOLON);
						}
						break;
					case 2:
						{
						_localctx = new Get_elemContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_get_elem);
						setState(92);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(93);
						match(OPEN_BRACKET);
						setState(95);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ARRAY_TYPE) | (1L << TYPE) | (1L << NAME) | (1L << NUMBER_LITERAL) | (1L << STRING_LITERAL) | (1L << OPEN_BRACKET))) != 0)) {
							{
							setState(94);
							params();
							}
						}

						setState(97);
						match(CLOSE_BRACKET);
						}
						break;
					}
					} 
				}
				setState(102);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Get_array_elemContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(xmlParser.NAME, 0); }
		public TerminalNode OPEN_SQUAR_EBRACKET() { return getToken(xmlParser.OPEN_SQUAR_EBRACKET, 0); }
		public TerminalNode NUMBER_LITERAL() { return getToken(xmlParser.NUMBER_LITERAL, 0); }
		public TerminalNode CLOSE_SQUARE_BRACKET() { return getToken(xmlParser.CLOSE_SQUARE_BRACKET, 0); }
		public Get_array_elemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_get_array_elem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).enterGet_array_elem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).exitGet_array_elem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xmlVisitor ) return ((xmlVisitor<? extends T>)visitor).visitGet_array_elem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Get_array_elemContext get_array_elem() throws RecognitionException {
		Get_array_elemContext _localctx = new Get_array_elemContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_get_array_elem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(NAME);
			setState(104);
			match(OPEN_SQUAR_EBRACKET);
			setState(105);
			match(NUMBER_LITERAL);
			setState(106);
			match(CLOSE_SQUARE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_callContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(xmlParser.NAME, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(xmlParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(xmlParser.CLOSE_BRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(xmlParser.SEMICOLON, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TerminalNode TYPE() { return getToken(xmlParser.TYPE, 0); }
		public TerminalNode ARRAY_TYPE() { return getToken(xmlParser.ARRAY_TYPE, 0); }
		public Func_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).enterFunc_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).exitFunc_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xmlVisitor ) return ((xmlVisitor<? extends T>)visitor).visitFunc_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_callContext func_call() throws RecognitionException {
		Func_callContext _localctx = new Func_callContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_func_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ARRAY_TYPE || _la==TYPE) {
				{
				setState(108);
				_la = _input.LA(1);
				if ( !(_la==ARRAY_TYPE || _la==TYPE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(111);
			match(NAME);
			setState(112);
			match(OPEN_BRACKET);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ARRAY_TYPE) | (1L << TYPE) | (1L << NAME) | (1L << NUMBER_LITERAL) | (1L << STRING_LITERAL) | (1L << OPEN_BRACKET))) != 0)) {
				{
				setState(113);
				params();
				}
			}

			setState(116);
			match(CLOSE_BRACKET);
			setState(117);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xmlListener ) ((xmlListener)listener).exitParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof xmlVisitor ) return ((xmlVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			expression(0);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(120);
				match(T__0);
				setState(121);
				expression(0);
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
